<resources>
    <string name="app_name">MyApp</string>
    <string name="tv_title">Music App</string>

    <string name="sign_up">Don\'t have an account? Register</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_username">Enter Username</string>
    <string name="hint_password">Enter your password</string>
    <string name="btn_log_in">Log in</string>
    <string name="btn_register">Register</string>
    <string name="hint_password_again">Re-enter your password</string>
    <string name="explore_music">Explore</string>
    <string name="created_date">Created %s</string>
    <string name="k_pop">K-POP</string>
    <string name="viet_nam">Việt Nam</string>
    <string name="us_uk">US-UK</string>
    <string name="tv_rating">Ranking</string>
    <string name="imgbtn_content">img</string>
    <string name="label_start_time">00:00</string>
    <string name="label_imgbutton">imgbutton</string>
    <string name="btn_play_all">Play all songs</string>
    <string name="delete_playlist_title">Delete Playlist</string>
    <string name="delete_playlist_message">Are you sure you want to delete playlist \"%s\"?</string>
    <string name="delete_playlist_warning">This action cannot be undone</string>
    <string name="delete">Delete</string>
    <string name="no_playlists_empty">No playlists available</string>
    <string name="add_to_playlist_title">Add to Playlist</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="logout_confirm">Logout</string>
    <string name="create_first_playlist">Create your first playlist</string>
    <string name="create_playlist_title">Create New Playlist</string>
    <string name="text_artist_name">Artist Name</string>
    <string name="text_song_name">Song Name</string>
    <string name="desc_image_avatar">Image Song</string>
    <string name="my_playlist">My Playlist</string>
    <string name="search_result">Search Results</string>
    <string name="search_no_result">No Results Found</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign out</string>
    <string name="favorite_songs">Favorites</string>
    <string name="play_list">Playlists</string>
    <string name="popular_songs">Popular</string>
    <string name="history_songs">History</string>
    <string name="playlist_list">Playlist</string>
    <string name="home">Home</string>
    <string name="hint_search">Search song.....</string>
    <string name="create">Create</string>
    <string name="btn_add">Thêm Playlist</string>
    <string name="no_song">Không có bài hát</string>
    <string name="hint_playlist_name">Nhập tên Playlist</string>
    <string name="tv_playlist_name">Tên Playlist</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_favorite">add_favorite</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="rename_palylist">Rename</string>
    <string name="hint_rename">"Enter new name "</string>
    <string name="add_playlist">Add Playlist</string>
</resources>