<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:id="@+id/group_main">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home" />
    <item
        android:id="@+id/nav_ranking"
        android:title="@string/tv_rating"
        android:icon="@drawable/ic_ranking" />
    <item
        android:id="@+id/nav_playlist"
        android:title="@string/play_list"
        
        android:icon="@drawable/ic_music_note" />
    <item
        android:id="@+id/nav_favorite"
        android:title="@string/favorite_songs"
        android:icon="@drawable/ic_add_favorite" />
    <item
        android:id="@+id/nav_history"
        android:title="@string/history_songs"
        android:icon="@drawable/ic_history" />
  </group>

  <item
      android:id="@+id/nav_signout"
      android:title="@string/sign_out"

      android:icon="@drawable/ic_logout" />
</menu>
