<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutMiniPlayer"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:background="@color/glass_input"
    android:padding="8dp"
    android:layout_marginBottom="12dp"
    android:elevation="4dp">



    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgMiniSong"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/imgbtn_content"
        android:scaleType="centerCrop"
        android:src="@drawable/image_no_available"
        tools:ignore="ImageContrastCheck"
        app:shapeAppearanceOverlay="@style/CircleImageView" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="8dp">

        <TextView
            android:id="@+id/tvMiniTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_song_name"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/tvMiniArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_artist_name"
            android:textSize="12sp"
            android:maxLines="1"
            android:ellipsize="end" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imgbtnFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/imgbtn_content"
        app:tint="@color/white"
        android:src="@drawable/ic_add_favorite"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imgbtnPlayPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/imgbtn_content"
        app:tint="@color/white"
        android:src="@drawable/ic_play"
        tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imgbtnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/white"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/imgbtn_content"
        android:src="@drawable/ic_next"
        tools:ignore="ImageContrastCheck" />
</LinearLayout>
