<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:paddingTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/imgbtnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingTop="22dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/imgbtn_content"
            android:src="@drawable/ic_back"
            app:tint="@color/white"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_search_edttext"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="16sp"
            tools:ignore="Autofill,TextContrastCheck,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvResults"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_result"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:gravity="center"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/layout_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="VisualLintOverlap" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcSearchResults"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResults"
        tools:ignore="SpeakableTextPresentCheck"
        tools:listitem="@layout/item_song" />

</androidx.constraintlayout.widget.ConstraintLayout>
